webapp/WEB-INF/base/emfrontend2/theme/styles/theme.css
/* ... */
.clearfix { clear: both;}
.form-control {
    padding: .275rem .75rem;
    font-size: 1rem;
    line-height: 1.3;
}
.btn-file {
    position: relative;
    overflow: hidden;
}
.btn-sm {
	line-height: 1.2;
}
.form-check-label-right {
	padding:0 25px 0 0;
}
.btn-file input[type=file] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    font-size: 100px;
    text-align: right;
    filter: alpha(opacity=0);
    opacity: 0;
    outline: none;
    background: white;
    cursor: inherit;
    display: block;
}
select.form-control:not([size]):not([multiple]) {
    height: calc(2rem);
}
select.form-control-sm:not([size]):not([multiple]) {
    height: calc(1.7rem);
        padding: .175rem .75rem;
        line-height: 1.1;
}
.resultsnavtitem .select2-container--bootstrap4 .select2-selection--single {
	height: calc(1.25rem + 2px)!important
}
.resultsnavtitem  .select2-container--bootstrap4 .select2-selection--single .select2-selection__rendered {
	line-height: 1.5;
}
.form-control-sm {
	width:200px;
	margin-right: 10px;
	display:inline-block;
	height: calc(1.8rem);
	}
.form-control.datepicker {
    width: 240px;
    display: inline-block;
}
.tooltip {
    position: relative;
    opacity: 1;
    z-index: auto;
    line-height: normal;
}
h3 {
    font-size: 24px;
    margin-top: 20px;
}
.modal {
	z-index: 25000;
}
.modal-backdrop {
	z-index: 24999;
}
.modal-title {
	display: inline-block;
} 
.dropdown-menu {
	padding:0;
}
.dropdown-submenu {
  position: relative;
}
.dropdown-item {
	padding:.25rem 1rem;
}
.dropdown-item-icon {
	padding-right:5px;
	font-size:.80em;
}
.dropdown-submenu a::after {
  transform: rotate(-90deg);
  position: absolute;
  right: 6px;
  top: .8em;
}

.dropdown-submenu .dropdown-menu {
  top: 0;
  left: 100%;
  margin-left: .1rem;
  margin-right: .1rem;
}
.dropdown-toggle::after {
	vertical-align:0.1em;
}
#emcontent { position: relative;}
#emfooter {   
	bottom: 0;
    left: 0;
    right: 0;
}
.table td, .table th {
    vertical-align: middle;
}
.emselectable {
	overflow-x: auto;
	margin-bottom:20px;
}
.emselectable .table-striped {
	margin-bottom:0;
}
select + .select2-container {
  width: 100% !important;
}
.select2-container {
	z-index: 20000;
}
.modal-open .select2-container {
	z-index: 25000;
}
.emnotify {
    position: absolute;
    text-align: center;
    border-radius: 10px;
    min-width: 16px;
    padding: 1px 4px;
    height: 1.2rem;
    font-size: 1rem;
    font-weight: bold;
    line-height: 18px;
}


/**MainContent*/
#application #emcontainer { 
	padding: 0; 
	overflow: hidden;
	}




/**Header**/
#header .navbar {
	padding:0!important;
}
#header .navbar {

}
#header .navbar-toggler {
	padding:.15rem .5rem;
	font-size:1rem; 
	background-color: #2680A0;
	margin:5px 3px;
	right: 0;
    top: 0;
    position: absolute;
    z-index:1001;
}
#header .navbar-collapse.show .navbar-nav {
	margin-top:10px;
}
#header .navbar-collapse.show .dropdown-menu {
	background-color: transparent;
	border:0 none;
	padding:0;
	background-color:rgba(0,0,0,0.2);
	border-radius:0;
}
#header .navbar-collapse.show .dropdown-item {
	border-bottom:1px solid #efefef;
	color:#fff;
}

#header .navlinks {
    float: right;
    border-radius: 0 0 5px 5px;
    padding: 1px 10px 5px 10px;
    z-index:1000;
}
#header .navlinks>ul { list-style: none; margin:0; padding: 0;}
#header .navlinks>ul li {
    border:0 none;
    border-top:1px solid #fff;
    line-height:2.2;
}
#header .navlinks>ul li.first { border:0 none;}
#header .dropdown-menu {
	padding:0;
}
#header ul.dropdown-menu li { float: none;}
#header .navlinks li>a {
    position: relative;
    padding: 0 5px;
    display: block;
}
#header .navlinks li>a:hover {
    text-decoration: none;
}
#header .navlinks>ul li.dropdown:last-child .dropdown-menu {
  right: 0;
  left: auto;
}
#header .navlinks .dropdown-item {
	padding:.25rem 1rem;
	font-size:0.8rem;
}
.emheader { min-height: 100px; }
.emheader .logocontainer { float: left; padding: 20px 20px 0 20px;}

@media (min-width: 768px) {
	.emheader-right {
		float:right;
	}
	#header .navlinks>ul li { float:left; padding:1px 8px;border:0 none; border-left:1px solid #fff; font-size:90%; line-height:1.2;}
}

#headerstatusarea
{
	float:right;
	clear:right;
	margin: 10px 10px 0 0;
	min-width: 200px;
	min-height: 40px;
}


/*Main Columns*/
html, body, #application {
	height: 100%;
}
#emcontent {
	height:100%;
	min-height: 100%;
}
.mainlayoutcontainer {
	position:relative;
	/*height: 100%;*/
	
}
.cols-main,
.results-header {
	position:relative;
	background-color: #d5d5d5;
}
.col-main {
	min-height: 800px;
	position:relative;
}
.col-sidebar {
	position: fixed;
    top: 0;
    bottom:0;
    left:-80%;
    display: block!important;
    width: 80%;
    height: 100%;
    
}
.col-content {
	min-height: 200px;
	position:relative;
}
.col-content-main {
	transition: 0.2s;
	margin:0;
	
}
.col-content-main.leftopen {
/*	margin-left:220px;*/
}
.leftopen .pushcontent {
	margin-left:220px;
}
.col-content-main.filtersopen {
	margin-right:220px;
}
@media (min-width: 992px) {
	.col-sidebar {
	    position: absolute;
	    left:0;
	    width: 280px;
	    
	    min-height: 100%;
    	
	}
	.col-content {
		margin-left: 280px;
		min-height: 200px;
	}
}
.emfooter {
	padding:15px 0;
}

/*Sidebars*/

.col-left {
	height: 100%;
    width: 0; 
    position: absolute; 
    /*z-index: 1;*/ 
    top: 45px; 
    left: 0;
    background-color: #fff; 
/*    overflow-x: hidden;*/ 
    transition: 0.2s;
}
.col-left.leftopen {
	width:220px;
}
.col-filters {
	height: 100%;
    width: 0; 
    position: absolute; 
    /*z-index: 1;*/ 
    top: 45px; 
    right: 0;
    background-color: #111; 
    transition: 0.2s;
 
    color:#eee;
}
.col-filters.filtersopen {
	width:220px;
}


.cols-librarycollection .col-filters,
.cols-librarycollection .col-left,
.cols-category .col-filters,
.cols-category .col-left {

}

.col-sidebar {  }
.col-sidebar h2 { margin:15px 20px; font-size: 1.6rem; }
/* ... */

